# minimal-viable-package

./: README.md  pyproject.toml
env/: mvp_env.yml
src/example/: __init__.py  welcome.py
